--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <%= link_to "Top", root_path %>
         </li>
         <li>
-          <%= link_to "Log in", '#' %>
+          <%= link_to "Log in", login_path %>
         </li>
       </ul>
     </nav>
