--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,16 +3,16 @@
   <table class="table table-bordered table-condensed user-table">
     <tr>
       <td>【<%= l(@first_day, format: :middle) %>】勤怠管理表</td>
-      <td>指定勤務時間<%= format_basic_info(@user.work_time) %></td>
-      <td>基本時間<%= format_basic_info(@user.basic_time) %></td>
-      <td>月初日<%= l(@first_day, format: :short) %></td>
+      <td>指定勤務時間：<%= format_basic_info(@user.work_time) %></td>
+      <td>基本時間：<%= format_basic_info(@user.basic_time) %></td>
+      <td>月初日：<%= l(@first_day, format: :short) %></td>
     </tr>
     
     <tr>
       <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前：<%= @user.name %></td>
-      <td>出勤日数</td>
-      <td>月末日<%= l(@last_day, format: :short) %></td>
+      <td>出勤日数：<%= @worked_sum %>日</td>
+      <td>月末日：<%= l(@last_day, format: :short) %></td>
     </tr>
   </table>
 </div>
